# seismic

./: .gitignore  sg_cunet_demo_final.py  sgy_validator.py
Marmousi2/: config.yaml  experiment_comparison.py  optimized_reproduction.py  quick_test.py
SEISMIC_CODING/: sgyxiufu.py  test.py
comparison01/: QUICK_REFERENCE.txt  REPRODUCE.md  REPRODUCTION_SUMMARY.txt  _inspect_ckpt_keys.py  compute_metrics.py  marmousi_cnn_bilstm.py  paper_extracted.txt  plot_trace_comparison.py  quick_check.py  run_train_and_plot.py  (+1 more)
comparison02/: README.md  REPRODUCTION_REPORT.md  pyproject.toml
comparison02/.mplconfig/: fontlist-v390.json
comparison02/configs/: default_synth.yaml
comparison02/fcrsn_cw/models/: fcrsn_cw.py  shrinkage.py
comparison02/fcrsn_cw/physics/: forward.py
comparison02/fcrsn_cw/utils/: metrics.py  plotting.py  seed.py
comparison02/scripts/: convert_data_npy_to_paper_npz.py  evaluate.py  extract_paper_text.py  make_synthetic_dataset.py  paper_forward_from_impedance.py  plot_zmy_results.py  summarize_runs.py  synthesize_paper_marmousi2.py  train.py  train_zmy_data.py
comparison03/: REPRODUCTION_REPORT.md  eval_v3.py  infer.py  plot_zmy_results.py  pyproject.toml  train.py  train_zmy_data.py  train_zmy_supervised.py
comparison03/configs/: optimized_v3_advanced.yaml  toy_fast.yaml  valve_like.yaml
comparison03/notebooks/: sanity_check_modules.ipynb
comparison03/scripts/: convert_root_marmousi2.py  run_ablations.py
comparison03/src/ss_gan/: data.py  forward.py  models.py  utils.py
comparison03/src/ss_gan_impedance.egg-info/: top_level.txt
(+435 files in other folders)
